<resources>
    <string name="app_name">Location</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="contact">Contact</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
</resources>
